starting up again going to work on all features model

--- a/app/ml_logic/prediction_models/create_ds_for_earnings_call_to_return.ipynb
+++ b/app/ml_logic/prediction_models/create_ds_for_earnings_call_to_return.ipynb
@@ -1039,6 +1039,46 @@
    ],
    "outputs": [],
    "execution_count": 31
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-22T16:56:16.594053Z",
+     "start_time": "2025-12-22T16:56:16.431233Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "print(final_df.head())",
+   "id": "4a15834b161af5f",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                 date ticker  \\\n",
+      "0 2020-08-27 21:00:00   BILI   \n",
+      "1 2020-07-30 16:30:00    GFF   \n",
+      "2 2019-10-23 17:00:00   LRCX   \n",
+      "3 2019-11-06 12:00:00   BBSI   \n",
+      "4 2019-08-07 08:30:00   CSTE   \n",
+      "\n",
+      "                                   transcript_masked  relative_year_return  \\\n",
+      "0  Prepared Remarks:\\nOperator\\nGood day, and wel...              0.245279   \n",
+      "1  Prepared Remarks:\\nOperator\\nThank you for sta...             -0.436972   \n",
+      "2  Prepared Remarks:\\nOperator\\nGood day and welc...             -0.113156   \n",
+      "3  Prepared Remarks:\\nOperator\\nGood day, everyon...             -0.293707   \n",
+      "4  Prepared Remarks:\\nOperator\\nGreetings and wel...             -0.355823   \n",
+      "\n",
+      "   standardized_return  year  return_percentile  \n",
+      "0             0.055259  2020           0.670070  \n",
+      "1            -0.846544  2020           0.082754  \n",
+      "2            -0.109676  2019           0.541154  \n",
+      "3            -0.433038  2019           0.308420  \n",
+      "4            -0.544284  2019           0.233680  \n"
+     ]
+    }
+   ],
+   "execution_count": 32
   }
  ],
  "metadata": {
