moving data to other place

--- a/backend/app/ml_logic/prediction_models/create_ds_for_earnings_call_to_return.ipynb
+++ b/backend/app/ml_logic/prediction_models/create_ds_for_earnings_call_to_return.ipynb
@@ -392,7 +392,7 @@
     "print(\"Calculating relative returns...\")\n",
     "df['relative_year_return'] = df.apply(get_relative_return, axis=1)\n",
     "\n",
-    "# Inspect the results\n",
+    "# Inspect the data\n",
     "print(df[['ticker', 'date', 'year_return', 'relative_year_return']].head())"
    ],
    "outputs": [],
